@@ -265,7 +265,7 @@ QMainWindow *TVision::openWindow()
 	    if( rez == DlgUser::SelCancel ) return NULL;
 	    if( rez == DlgUser::SelErr )
 	    {
-		postMess(nodePath().c_str(),_("Auth is wrong!!!"));
+		postMess(nodePath().c_str(),_("Auth wrong!!!"));
 		continue;
 	    }
 	    user_open = d_usr.user().toAscii().data();
